...
    updateDescription: (String) -> Unit,
    setSport: (ActivityType) -> Unit,
    setTimeFrame: (TimeFrame) -> Unit,
    navigateToSettings: () -> Unit,
    isOnline: ConnectionState
) {
  LazyColumn(modifier = Modifier.testTag("ProfileScreen")) {
    item {
      Box(
          modifier =
              Modifier.fillMaxWidth()
                  .clip(RoundedCornerShape(bottomStart = 8.dp, bottomEnd = 8.dp))
                  .background(MaterialTheme.colorScheme.primary)
...
                  fontWeight = FontWeight.Bold)

              Spacer(modifier = Modifier.width(8.dp))
              if (isCurrentUser) {
                IconButton(
                    onClick = { navigateToSettings() },
                    modifier = Modifier.testTag("showDialog"),
                    enabled = isOnline == ConnectionState.CONNECTED) {
                      Icon(
                          Icons.Filled.Menu,
                          contentDescription = "Edit bio",
                          tint =
                              if (isOnline == ConnectionState.CONNECTED)
...
        fontWeight = FontWeight.Bold,
        style = TextStyle(fontSize = 20.sp))

    when (sport) {
      ActivityType.HIKING -> {
        Text(
            LocalContext.current.getString(R.string.hikes), modifier = Modifier.testTag("TestHike"))
      }
      ActivityType.CLIMBING -> {
        Text(
            LocalContext.current.getString(R.string.climbs),
            modifier = Modifier.testTag("TestClimb"))
      }
      ActivityType.BIKING -> {
        Text(
            LocalContext.current.getString(R.string.ride),
            modifier = Modifier.testTag("TestBiking"))
      }
...
    onBioChange: (String) -> Unit
) {
  val maxCharCount = 70
  var text by remember { mutableStateOf(bioText) }
  ModalBottomSheet(
      onDismissRequest = { onDismissRequest() },
      modifier = Modifier.fillMaxWidth().wrapContentHeight().testTag("ProfileModal")) {
        Column(modifier = Modifier.fillMaxWidth().padding(16.dp)) {
          Text(LocalContext.current.getString(R.string.bio))
          Spacer(modifier = Modifier.height(8.dp))
          TextField(
              value = text,
              onValueChange = {
...
              },
              placeholder = { Text(LocalContext.current.getString(R.string.enter_bio)) },
              singleLine = false,
              maxLines = 2,
              keyboardOptions = KeyboardOptions.Default.copy(imeAction = ImeAction.Done),
              trailingIcon = { TrailingIcon(text = text, max = maxCharCount) },
              modifier = Modifier.fillMaxWidth().testTag("ProfileTextField"))

          Spacer(modifier = Modifier.height(16.dp))
          Box(
              contentAlignment = Alignment.Center,
              modifier = Modifier.fillMaxWidth().testTag("ProfileBox")) {
                Row {
                  Button(onClick = onDismissRequest) {
                    Text(LocalContext.current.getString(R.string.cancel))
                  }
                  Spacer(modifier = Modifier.width(16.dp))
                  Button(onClick = { onBioChange(text) }) {
...
